# arx5-sdk

./: .gitignore  CMakeLists.txt  README.md  update_logs.md
conda_environments/: py310_environment.yaml  py311_environment.yaml  py312_environment.yaml  py38_environment.yaml  py39_environment.yaml
examples/: test_cartesian_controller.cpp  test_joint_controller.cpp
include/: utils.h
include/app/: cartesian_controller.h  common.h  config.h  controller_base.h  joint_controller.h  solver.h
include/hardware/: arx_can.h
models/: L5.urdf  L5_iphumi.urdf  L5_umi.urdf  X5.urdf  X5_iphumi.urdf  X5_umi.urdf
python/: CMakeLists.txt  arx5_interface.pyi  arx5_pybind.cpp
python/communication/: zmq_server.py
python/examples/: aloha.py  calibrate.py  cartesian_waypoint_scheduling.py  joint_waypoint_scheduling.py  keyboard_teleop.py  spacemouse_teleop.py  teach_replay.py  test_bimanual.py  test_gripper_force_compensation.py  test_joint_control.py  test_solver.py  test_torque_control.py  test_upside_down.py  test_x7.py
src/: utils.cpp
src/app/: cartesian_controller.cpp  controller_base.cpp  joint_controller.cpp
wheels/: CMakeLists.txt  Dockerfile.single_ver_aarch64  Dockerfile.single_ver_x86_64  Dockerfile.x86_64  __init__.py  build_wheel_single_ver.sh  build_wheels.sh  pyproject.toml  setup.py
